--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.0",
+    "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/style-resources": "^1.2.0",
+    "eslint": "^7.32.0",
     "fibers": "^5.0.0",
     "sass": "^1.37.0",
     "sass-loader": "^10.2.0"
